# aws-chatbot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-lint-and-test.yml
aws_chatbot/: chatbot.py
aws_chatbot/lib/: aws_session.py
aws_chatbot/schemas/: aws_tool_inputs.py
aws_chatbot/tools/aws/: ec2.py  iam.py  s3.py
scripts/: start_chatbot.py
tests/: test_tests.py
